fix: completar correcciones backend y frontend sprint 2