@@ -1,7 +1,9 @@
 package maryoris.tuteloapp.service;
 
-import maryoris.tuteloapp.dto.HotelRequest;
+import maryoris.tuteloapp.dto.CategoryResponse;
 import maryoris.tuteloapp.dto.HotelCharacteristicValueRequest;
+import maryoris.tuteloapp.dto.HotelPublicResponse;
+import maryoris.tuteloapp.dto.HotelRequest;
 import maryoris.tuteloapp.entity.CategoryEntity;
 import maryoris.tuteloapp.entity.CharacteristicEntity;
 import maryoris.tuteloapp.entity.HotelCharacteristicEntity;
@@ -14,17 +16,14 @@ import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.io.IOException;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.stream.Collectors;
-
-import maryoris.tuteloapp.dto.CategoryResponse;
-import maryoris.tuteloapp.dto.HotelPublicResponse;
-
 
 @Service
 public class HotelService {
@@ -33,20 +32,22 @@ public class HotelService {
     private final CategoryRepository categoryRepository;
     private final CharacteristicRepository characteristicRepository;
     private final HotelCharacteristicRepository hotelCharacteristicRepository;
+    private final FileStorageService fileStorageService;
 
     public HotelService(
             HotelRepository hotelRepository,
             CategoryRepository categoryRepository,
             CharacteristicRepository characteristicRepository,
-            HotelCharacteristicRepository hotelCharacteristicRepository
+            HotelCharacteristicRepository hotelCharacteristicRepository,
+            FileStorageService fileStorageService
     ) {
         this.hotelRepository = hotelRepository;
         this.categoryRepository = categoryRepository;
         this.characteristicRepository = characteristicRepository;
         this.hotelCharacteristicRepository = hotelCharacteristicRepository;
+        this.fileStorageService = fileStorageService;
     }
 
-    // Create usando DTO, reutiliza lógica y mensajes
     public HotelEntity create(HotelRequest req) {
         HotelEntity hotel = new HotelEntity();
         hotel.setName(req.getName());
@@ -54,16 +55,12 @@ public class HotelService {
         hotel.setAddress(req.getAddress());
         hotel.setDescription(req.getDescription());
 
-        // Si vienen características, las aplicamos antes del save (cascade)
         applyCharacteristics(hotel, req.getCharacteristics());
 
-        return create(hotel); // reutiliza tu create(HotelEntity) intacto
+        return create(hotel);
     }
 
-
-    // Tu create original se mantiene
     public HotelEntity create(HotelEntity hotel) {
-
         String name = hotel.getName() == null ? null : hotel.getName().trim();
         String city = hotel.getCity() == null ? null : hotel.getCity().trim();
         String address = hotel.getAddress() == null ? null : hotel.getAddress().trim();
@@ -92,7 +89,6 @@ public class HotelService {
         try {
             return hotelRepository.save(hotel);
         } catch (DataIntegrityViolationException ex) {
-            // Backup por si el constraint de DB dispara
             throw new ResponseStatusException(
                     HttpStatus.CONFLICT,
                     "Ya existe un hotel con ese nombre"
@@ -104,6 +100,11 @@ public class HotelService {
         return hotelRepository.findAll();
     }
 
+    public HotelEntity getById(Long id) {
+        return hotelRepository.findById(id)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Hotel no existe"));
+    }
+
     public void delete(Long id) {
         if (!hotelRepository.existsById(id)) {
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Hotel no existe");
@@ -111,7 +112,6 @@ public class HotelService {
         hotelRepository.deleteById(id);
     }
 
-    // Para que el PUT funcione (se mantiene igual, pero ahora soporta characteristics)
     public HotelEntity update(Long id, HotelRequest req) {
         HotelEntity h = hotelRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Hotel no existe"));
@@ -121,16 +121,12 @@ public class HotelService {
         h.setAddress(req.getAddress());
         h.setDescription(req.getDescription());
 
-        // - Si req.getCharacteristics() == null => no toca nada (no rompe front actual)
-        // - Si viene lista vacía => limpia todas
         applyCharacteristics(h, req.getCharacteristics());
 
         return hotelRepository.save(h);
     }
 
-    // Asigna/actualiza categorías a un hotel existente (sin cambios)
     public HotelEntity updateCategories(Long hotelId, List<Long> categoryIds) {
-
         if (categoryIds == null || categoryIds.isEmpty()) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Debe seleccionar al menos una categoría");
         }
@@ -144,7 +140,7 @@ public class HotelService {
             Set<Long> foundIds = found.stream().map(CategoryEntity::getId).collect(Collectors.toSet());
             List<Long> missing = categoryIds.stream()
                     .filter(cid -> !foundIds.contains(cid))
-                    .collect(Collectors.toList());
+                    .toList();
 
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Categorías no encontradas: " + missing);
         }
@@ -175,32 +171,25 @@ public class HotelService {
         }).toList();
     }
 
-    // PATCH de characteristics
-    // FIX DEFINITIVO: permite "encender" muchas y también "apagar" (payload vacío limpia todo)
-    // FIX 500: el delete+insert se hace en 1 transacción y con flush para evitar unique constraint
     @Transactional
     public HotelEntity updateCharacteristics(Long hotelId, List<HotelCharacteristicValueRequest> requests) {
 
         HotelEntity hotel = hotelRepository.findById(hotelId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Hotel no existe"));
 
-        // IMPORTANTÍSIMO: sincronizar el estado en memoria
         if (hotel.getCharacteristics() == null) {
             hotel.setCharacteristics(new ArrayList<>());
         } else {
             hotel.getCharacteristics().clear();
         }
 
-        // 1) Borrar TODO en DB
         hotelCharacteristicRepository.deleteByHotel_Id(hotelId);
         hotelCharacteristicRepository.flush();
 
-        // 2) Si viene vacío => queda sin características (APAGAR TODO)
         if (requests == null || requests.isEmpty()) {
             return hotel;
         }
 
-        // 3) Insertar nuevas
         List<HotelCharacteristicEntity> savedList = new ArrayList<>();
 
         for (HotelCharacteristicValueRequest item : requests) {
@@ -216,9 +205,6 @@ public class HotelService {
             hc.setCharacteristic(characteristic);
 
             if (characteristic.getType() == CharacteristicEntity.Type.BOOLEAN) {
-
-                // Si el front manda solo true, esto siempre llega en true.
-                // Igual lo validamos para evitar null.
                 if (item.getBoolValue() == null) {
                     throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
                             "boolValue requerido para " + characteristic.getName());
@@ -228,7 +214,6 @@ public class HotelService {
                 hc.setNumValue(null);
 
             } else {
-
                 if (item.getNumValue() == null || item.getNumValue() < 0) {
                     throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
                             "numValue inválido para " + characteristic.getName());
@@ -241,64 +226,89 @@ public class HotelService {
             savedList.add(hotelCharacteristicRepository.save(hc));
         }
 
-        // IMPORTANTÍSIMO: reflejar en el entity para que el JSON devuelto esté consistente
         hotel.getCharacteristics().addAll(savedList);
 
         return hotel;
     }
-    // Se mantiene: elimina una imagen por URL (quita de DB y borra el archivo si existe)
+
+    /*
+     * CORRECCIÓN - Punto 5: Arquitectura del HotelController
+     * La lógica de carga de imágenes se delega al service, que coordina
+     * la persistencia del hotel y reutiliza FileStorageService para el filesystem.
+     */
+    @Transactional
+    public List<String> uploadImages(Long hotelId, List<MultipartFile> files) {
+        if (files == null || files.isEmpty()) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "No se enviaron archivos");
+        }
+
+        HotelEntity hotel = hotelRepository.findById(hotelId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Hotel no existe"));
+
+        try {
+            List<String> urls = fileStorageService.saveHotelImages(files);
+
+            if (hotel.getImageUrls() == null) {
+                hotel.setImageUrls(new ArrayList<>());
+            }
+
+            hotel.getImageUrls().addAll(urls);
+            hotelRepository.save(hotel);
+
+            return urls;
+        } catch (IOException ex) {
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Error guardando imágenes", ex);
+        }
+    }
+
+    /*
+     * CORRECCIÓN - Punto 5: Arquitectura del HotelController
+     * El service mantiene la lógica de negocio de desvincular la imagen del hotel
+     * y delega el borrado físico del archivo a FileStorageService.
+     */
     public void deleteImageByUrl(Long hotelId, String url) {
         HotelEntity hotel = hotelRepository.findById(hotelId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Hotel no existe"));
 
-        if (hotel.getImageUrls() == null || hotel.getImageUrls().isEmpty()) return;
+        if (hotel.getImageUrls() == null || hotel.getImageUrls().isEmpty()) {
+            return;
+        }
 
-        boolean removed = hotel.getImageUrls().removeIf(u -> u != null && u.equals(url));
+        String decoded = URLDecoder.decode(url, StandardCharsets.UTF_8);
+
+        boolean removed = hotel.getImageUrls().removeIf(u -> u != null && u.equals(decoded));
         if (removed) {
             hotelRepository.save(hotel);
         }
 
-        // Borrar archivo físico si está en /uploads/...
         try {
-            if (url != null && url.startsWith("/uploads/")) {
-                String filename = url.replaceFirst("^/uploads/", "");
-                Path filePath = Paths.get("uploads").resolve(filename).normalize();
-                Files.deleteIfExists(filePath);
-            }
-        } catch (Exception ignored) {
-            // no rompemos nada si falla el delete del archivo
+            fileStorageService.deleteHotelImageByUrl(decoded);
+        } catch (IOException ex) {
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Error eliminando archivo físico", ex);
         }
     }
 
-    // =========================================================
-    // Aplica characteristics al hotel (create / update / patch)
-    // =========================================================
     private void applyCharacteristics(HotelEntity hotel, List<HotelCharacteristicValueRequest> reqList) {
-
-        // Si el frontend actual todavía no envía characteristics => no tocamos nada.
         if (reqList == null) return;
 
-        // Asegurar lista inicializada
         if (hotel.getCharacteristics() == null) {
             hotel.setCharacteristics(new ArrayList<>());
         } else {
             hotel.getCharacteristics().clear();
         }
 
-        // Si viene lista vacía => queda limpio
         if (reqList.isEmpty()) return;
 
-        // Traemos todas las características por IDs
         List<Long> ids = reqList.stream()
                 .map(HotelCharacteristicValueRequest::getCharacteristicId)
                 .filter(Objects::nonNull)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         List<CharacteristicEntity> found = characteristicRepository.findAllById(ids);
         if (found.size() != ids.size()) {
             Set<Long> foundIds = found.stream().map(CharacteristicEntity::getId).collect(Collectors.toSet());
-            List<Long> missing = ids.stream().filter(cid -> !foundIds.contains(cid)).collect(Collectors.toList());
+            List<Long> missing = ids.stream().filter(cid -> !foundIds.contains(cid)).toList();
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Características no encontradas: " + missing);
         }
 
@@ -306,7 +316,6 @@ public class HotelService {
                 .collect(Collectors.toMap(CharacteristicEntity::getId, c -> c));
 
         for (HotelCharacteristicValueRequest item : reqList) {
-
             if (item.getCharacteristicId() == null) {
                 throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "characteristicId is required");
             }
@@ -321,7 +330,6 @@ public class HotelService {
             hc.setCharacteristic(c);
 
             if (c.getType() == CharacteristicEntity.Type.BOOLEAN) {
-
                 if (item.getBoolValue() == null) {
                     throw new ResponseStatusException(
                             HttpStatus.BAD_REQUEST,
@@ -332,7 +340,6 @@ public class HotelService {
                 hc.setNumValue(null);
 
             } else if (c.getType() == CharacteristicEntity.Type.NUMBER) {
-
                 if (item.getNumValue() == null) {
                     throw new ResponseStatusException(
                             HttpStatus.BAD_REQUEST,
